# barbershop_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config.py  main.py  tasks.py
bot/database/: db.py  session.py
bot/handlers/client/: booking.py  start.py
bot/models/: __init__.py  booking.py  user.py
migrations/: env.py
migrations/versions/: 01f1a4a39a09_initial_migration.py
